# awtk-msvc

./: README.md  allwarning.txt  build_gen.bat
cmake/: CMakeLists.txt
cmake/awtk-examples/Chart-Demo/: CMakeLists.txt
cmake/awtk-examples/CleanAir-Demo/: CMakeLists.txt
cmake/awtk-examples/HelloDesigner-Demo/: CMakeLists.txt
cmake/awtk-examples/HelloWorld.Max-Demo/: CMakeLists.txt
cmake/awtk-examples/HelloWorld.Xml-Demo/: CMakeLists.txt
cmake/awtk-examples/MusicPlayer-Demo/: CMakeLists.txt
cmake/awtk-examples/SmartWatch-Demo/: CMakeLists.txt
cmake/awtk-terminal/: CMakeLists.txt
cmake/awtk/demos/: CMakeLists.txt
cmake/awtk/tests/: CMakeLists.txt
cmake/awtk/tools/: CMakeLists.txt
